# ParquetGrip

./: .gitignore  Cargo.toml  LICENSE  README.md  README.zh-CN.md
.github/workflows/: release.yml
assets/: icon.icns
scripts/: generate_icons.sh
src/: backend.rs  main.rs
