[package]
name = "ParquetGrip"
version = "0.1.0"
edition = "2021"

[dependencies]

eframe = "0.33.3"
egui_extras = { version = "0.33.3", features = ["all_loaders"] } # all_loaders enables image support
egui_dock = "0.18" # Docking and tabs system
duckdb = { version = "1.0.0", features = ["bundled"] } 
arrow = "54.2.0"
parquet = "54.2.0"
rfd = "0.14.1" 
tokio = { version = "1", features = ["full", "rt-multi-thread"] } # Needed for async runtime
chrono = "0.4"

